[package]
name = "simple-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
bytes = "1.7.1"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
futures = "0.3.30"
lazy_static = "1.5.0"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-stream = "0.1.16"
tokio-util = { version = "0.7.12", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
